# sheetalAI

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  run_local.sh
api/: config.py  main.py  pyproject.toml
api/routers/: __init__.py  advisory.py  layers.py  summary.py  zones.py
data-pipeline/: config.py  features.py  gee_auth.py  gee_export.py  grid.py  indices.py  pyproject.toml  raster_io.py
data-pipeline/config/: cities.yaml
data-pipeline/sources/: __init__.py  base.py  gee.py  synthetic.py
docs/: PROJECT_STATE.md
ml/: config.py  explain.py  hotspots.py  prioritize.py  pyproject.toml  simulate.py  train.py
notebooks/: 01_phase1_data_check.ipynb
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: MapView.tsx  StatsPanel.tsx  ZonePanel.tsx
web/src/lib/: api.ts
