[project]
name = "sheetalai-api"
version = "0.1.0"
description = "SheetalAI API — FastAPI read-only service over cached results"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "requests>=2.31",
]

[dependency-groups]
dev = ["ruff>=0.5", "black>=24.0", "httpx>=0.27", "pytest>=8.0"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
