[project]
name = "sheetalai-data-pipeline"
version = "0.1.0"
description = "SheetalAI data pipeline — GEE export + feature stack"
requires-python = ">=3.11,<3.13"
dependencies = [
    "earthengine-api>=1.0.0",
    "geemap>=0.32.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "rasterio>=1.3",
    "affine>=2.4",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "scipy>=1.12",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "requests>=2.31",
]

[dependency-groups]
dev = ["ruff>=0.5", "black>=24.0", "ipykernel>=6.29"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
