[project]
name = "sheetalai-ml"
version = "0.1.0"
description = "SheetalAI ML — hotspots, driver model, SHAP, simulation, prioritisation"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.1",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
    # Pin numba/llvmlite floors so the resolver picks 3.12-compatible wheels
    # instead of building an ancient llvmlite from source (the default pull).
    "numba>=0.60",
    "llvmlite>=0.43",
    "esda>=2.5",
    "libpysal>=4.10",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "pillow>=10.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = ["ruff>=0.5", "black>=24.0", "ipykernel>=6.29"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
